--- a/7.0+CSS+Cascade/style.css
+++ b/7.0+CSS+Cascade/style.css
@@ -10,3 +10,16 @@ p {
   margin: 0;
   padding: 0;
 }
+.inner-box {
+  background-color: red;
+}
+#outer-box {
+  background-color: purple;
+
+}
+.white-text {
+  color: white;
+}
+.p {
+  color: yellow;
+}
